--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,6 +1,6 @@
 <mvc:View controllerName="project1cicd.controller.View1"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
-    <Page id="page" title="cicd demo today @11.11 jhdjhjashdas">
+    <Page id="page" title="cicd demo today @11.11 jhdjhjashdas jjjjj">
     </Page>
 </mvc:View>
